<resources>
    <string name="app_name">AliuminiManager</string>
    <string name="hint_name">Enter Full Name</string>
    <string name="hint_username">Enter User Name </string>
    <string name="hint_password">Enter Password </string>
    <string name="hint_confirm_password">Confirm Password </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already a member? Sign In</string>
    <item name="idLLTopBar" type="id" />
    <item name="idCVAuthor" type="id" />
    <item name="idTVAuthorName" type="id" />
    <item name="idTVTime" type="id" />
    <item name="idTVDescription" type="id" />
    <item name="idIVPost" type="id" />
    <item name="idTVLikes" type="id" />
    <item name="idTVComments" type="id" />
    <item name="idLLShare" type="id" />
    <item name="idTVShare" type="id" />
</resources>